--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>{% block title %}-Stras'Cook{% endblock %}</title>
+    <title>{% block title %}- Strascook{% endblock %}</title>
 
     <link rel="stylesheet" href="/assets/css/style.css">
     {% block stylesheet %}
