--- a/src/View/layout/navBar.html.twig
+++ b/src/View/layout/navBar.html.twig
@@ -1,38 +1,64 @@
-<nav class="uk-navbar-container uk-margin" uk-navbar="mode: click">
-<a class="uk-navbar-item uk-logo uk-margin-medium-left" href="#"><img src="/assets/images/logo_anime.gif"></a>
-<a class="uk-navbar-item uk-logo uk-margin-medium-left" href="#"><img src="/assets/images/logo_name.jpg"></a>
+<div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky" class="uk-visible@m">
+    <nav class="uk-navbar-container uk-margin " uk-navbar="mode: click" style="background-color:#FF1616;" >
+        <a class="uk-navbar-item uk-logo uk-margin-medium-left" href="#"><img src="/assets/images/logo_anime.gif"></a>
+        <div class="uk-navbar-item uk-logo uk-margin-medium-left uk-visible@xl" href="#"><img src="/assets/images/final_logo.svg"></div>
+        <div class="uk-navbar-center">
+            <ul class="uk-navbar-nav">
+                <li class="uk-active" ><a href="#">Accueil</a></li>
+                <li>
+                    <a class="uk-text-emphasis" href="#">Carte</a>
+                    <div class="uk-navbar-dropdown">
+                        <ul class="uk-nav uk-dropdown-nav">
+                            <li class="uk-nav-header"><a href="#">Entrées</a></li>
+                            <li class="uk-nav-divider"></li>
+                            <li><a href="#">Végé</a></li>
+                            <li><a href="#">Végan</a></li>
+                            <li><a href="#">Normaux</a></li>
+                            <li class="uk-nav-header">Plats</li>
+                            <li class="uk-nav-divider"></li>
+                            <li><a href="#">Végé</a></li>
+                            <li><a href="#">Végan</a></li>
+                            <li><a href="#">Normaux</a></li>
+                            <li class="uk-nav-header">Desserts</li>
+                            <li class="uk-nav-divider"></li>
+                            <li><a href="#">Végé</a></li>
+                            <li><a href="#">Végan</a></li>
+                            <li><a href="#">Normaux</a></li>
+                            <li class="uk-nav-header">Boissons</li>
+                        </ul>
+                    </div>
+                </li>
+                <li><a class="uk-text-emphasis" href="#">Réservation</a></li>
+                <li><a class="uk-text-emphasis" href="#">Inscription/Connexion</a></li>
+                <li><a class="uk-text-emphasis" href="#">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+</div>
 
-    <div class="uk-navbar-center">
-        
-        <ul class="uk-navbar-nav">
-            <li class="uk-active"><a href="#">Acceuil</a></li>
-            <li>
-                <a href="#">Carte</a>
-                <div class="uk-navbar-dropdown">
-                    <ul class="uk-nav uk-dropdown-nav">
-                    <li class="uk-nav-header"><a href="#">Entrées</a></li>
-                    <li class="uk-nav-divider"></li>
-                    <li><a href="#">Végé</a></li>
-                    <li><a href="#">Végan</a></li>
-                    <li><a href="#">Normaux</a></li>
-                    <li class="uk-nav-header">Plats</li>
-                    <li class="uk-nav-divider"></li>
-                    <li><a href="#">Végé</a></li>
-                    <li><a href="#">Végan</a></li>
-                    <li><a href="#">Normaux</a></li>
-                    <li class="uk-nav-header">Desserts</li>
-                    <li class="uk-nav-divider"></li>
-                    <li><a href="#">Végé</a></li>
-                    <li><a href="#">Végan</a></li>
-                    <li><a href="#">Normaux</a></li>
-                    <li class="uk-nav-header">Boissons</li>
-                </ul>
+<!-- version mobile-->
+<nav class="uk-navbar uk-navbar-container uk-margin uk-hidden@m" uk-offcanvas>
+    <div class="uk-navbar-left">
+        <a class="uk-navbar-toggle" href="#">
+            <button class="uk-button uk-button-default uk-margin-small-right" type="button" uk-toggle="target: #offcanvas-nav-primary"><span uk-navbar-toggle-icon></span> <span class="uk-margin-small-left">Menu</span></button>
+            <div id="offcanvas-nav-primary" uk-offcanvas="overlay: true">
+                <div class="uk-offcanvas-bar uk-flex uk-flex-column">
+                    <ul class="uk-nav uk-nav-primary uk-nav-center">
+                        <li class="uk-active"><a href="../global/index.php">Accueil</a></li>
+                        <li class="uk-nav-header"><a href="">MENUS</a></li>
+                        <li><a href=""><span class="uk-margin-small-right" ></span>Plat du jour</a></li> 
+                        <li><a href=""><span class="uk-margin-small-right" ></span>Entrées</a></li>
+                        <li><a href=""><span class="uk-margin-small-right" ></span>Plats</a></li>
+                        <li><a href=""><span class="uk-margin-small-right" ></span>Desserts</a></li>
+                        <li><a href=""><span class="uk-margin-small-right" ></span>Boissons</a></li>
+                        <li class="uk-nav-header"><a href="cvFranky.php">Réservation</a></li>
+                        <li><a href=""><span class="uk-margin-small-right" ></span>Inscription/connexion</a></li>
+                        <li><a href=""><span class="uk-margin-small-right" ></span>Contact</a></li>
+                        </li>
+                    </ul>
                 </div>
-            </li>
-            <li><a href="#">Réservation</a></li>
-            <li><a href="#">Inscription/Connexion</a></li>
-            
-        </ul>
-
+            </div>
+        </a>
     </div>
 </nav>
+
