Page entree avec edit delete update et tri

--- a/src/View/layout/navBar.html.twig
+++ b/src/View/layout/navBar.html.twig
@@ -4,12 +4,12 @@
         <div class="uk-navbar-item uk-logo uk-margin-medium-left uk-visible@xl" href="#"><img src="/assets/images/final_logo.svg"></div>
         <div class="uk-navbar-center">
             <ul class="uk-navbar-nav">
-                <li class="uk-active" ><a href="#">Accueil</a></li>
+                <li class="uk-active" ><a href="/">Accueil</a></li>
                 <li>
                     <a class="uk-text-emphasis" href="#">Carte</a>
                     <div class="uk-navbar-dropdown">
                         <ul class="uk-nav uk-dropdown-nav">
-                            <li class="uk-nav-header"><a href="#">Entrées</a></li>
+                            <li class="uk-nav-header"><a href="Entree/index">Entrées</a></li>
                             <li class="uk-nav-divider"></li>
                             <li><a href="#">Végé</a></li>
                             <li><a href="#">Végan</a></li>
