--- a/src/View/Item/_form.html.twig
+++ b/src/View/Item/_form.html.twig
@@ -1,7 +1,19 @@
 {# TODO : manage errors display #}
 
 <form method="post">
-	<input type="hidden" value="{{ item.id }}" name="id">
-	<input type="text" value="{{ item.title }}" name="title">
+	<input type="hidden" name="id"  value="<?= $_GET['id']; ?>" >
+	<input type="text" placeholder="category" name="category">
+	<input type="text" placeholder="name" name="name">
+	<input type="text" placeholder="description" name="description">
+	<input type="text" placeholder="price" name="price">
+	<input type="text" placeholder="image" name="image">
+	<input type="submit" value="Valider">
+</form>
+
+
+
+<form method="post">
+	<input type="hidden" value="{{ entree.id }}" name="id">
+	<input type="text" value="{{ entree.name }}" name="title">
 	<input type="submit" value="Valider">
 </form>
