--- a/src/View/Item/edit.html.twig
+++ b/src/View/Item/edit.html.twig
@@ -1,7 +1,7 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    <h1>Edit item {{ item.title }}</h1>
+    <h1>Edit recette {{ item.title }}</h1>
     {% include 'Item/_form.html.twig' %}
-    <a href="/item/show/{{ item.id }}">Back</a>
+    <a href="/item/show/{{ recette.id }}">Back</a>
 {% endblock %}
