Update sort methode we had 3 methods now its all in one!

--- a/src/View/Entree/carte_entree.html.twig
+++ b/src/View/Entree/carte_entree.html.twig
@@ -14,11 +14,11 @@
                         <ul class="uk-nav uk-navbar-dropdown-nav">
                             
                             
-                            <li class="uk-nav-header"><a href="/Entree/indexOmnivore">Omnivores</a></li>
+                            <li class="uk-nav-header"><a href="/Entree/indexCat/Omnivore">Omnivores</a></li>
                             <li class="uk-nav-divider"></li>
-                            <li class="uk-nav-header"><a href="/Entree/indexVegetarian">Végétariens</a></li>
+                            <li class="uk-nav-header"><a href="/Entree/indexCat/vegetarian">Végétariens</a></li>
                             <li class="uk-nav-divider"></li>
-                            <li class="uk-nav-header"><a href="/Entree/indexVegan">Végans</a></li>
+                            <li class="uk-nav-header"><a href="/Entree/indexCat/vegan">Végans</a></li>
                             <li class="uk-nav-divider"></li>
                         </ul>
                     </div>
