Add scroll up button at the end of the page

--- a/src/View/Entree/carte_entree.html.twig
+++ b/src/View/Entree/carte_entree.html.twig
@@ -71,4 +71,8 @@
     </ul>
 
      <a class="uk-hidden" href="/Entree/add">Ajouter</a>
+
+    <div class="uk-flex uk-flex-right uk-margin-medium-right">
+    <a href="" uk-totop uk-scroll data-uk-smooth-scroll width="40" height="40"></a>
+    </div>
 {% endblock %}
