Add path for many button on the index page

--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -27,9 +27,9 @@
                 <ul class="uk-nav uk-dropdown-nav ">
                     <li class="uk-nav-header">Entrées</li>
                     <li class="uk-nav-divider"></li>
-                    <li><a href="#">Végé</a></li>
-                    <li><a href="#">Végan</a></li>
-                    <li><a href="#">Normaux</a></li>
+                    <li><a href="/Entree/indexCat/Omnivore">Omnivores</a></li>
+                    <li><a href="/Entree/indexCat/vegetarian">Végétariens</a></li>
+                    <li><a href="/Entree/indexCat/vegan">Végans</a></li>
                     <li class="uk-nav-header">Plats</li>
                     <li class="uk-nav-divider"></li>
                     <li><a href="#">Végé</a></li>
