--- a/src/View/Entree/carte_entree.html.twig
+++ b/src/View/Entree/carte_entree.html.twig
@@ -1,5 +1,5 @@
 {% extends 'layout.html.twig' %}
-
+{% block title %}Entrées {{parent()}}{% endblock %}
 {% block content %}
  <div class="uk-align-center">
 
