--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -17,10 +17,10 @@
 </div>
 
 <div class="uk-card uk-card-default uk-card-body uk-width-1-2@m uk-align-center">
-    <h3 class="uk-card-title uk-align-center">Menus</h3>
+    <h3 class="uk-card-title uk-align-center">Menu</h3>
     <p>Lorem ipsum  sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     <div class="uk-button-group uk-flex uk-flex-center">
-        <button class="uk-button uk-button-default">Menus</button>
+        <button class="uk-button uk-button-default">Carte</button>
         <div class="uk-inline ">
             <button class="uk-button uk-button-default" type="button"><span uk-icon="icon:  triangle-down"></span></button>
             <div uk-dropdown="mode: click; boundary: ! .uk-button-group; boundary-align: false; ">
