add CRUD Function for the plat du jour

--- a/src/View/layout/navBar.html.twig
+++ b/src/View/layout/navBar.html.twig
@@ -6,7 +6,7 @@
             <ul class="uk-navbar-nav">
                 <li class="uk-active" ><a href="/">Accueil</a></li>
                 <li>
-                    <a class="uk-text-emphasis" href="#">Carte</a>
+                    <a class="uk-text-emphasis" href="Jour/index">Carte</a>
                     <div class="uk-navbar-dropdown">
                         <ul class="uk-nav uk-dropdown-nav">
                             <li class="uk-nav-header"><a href="Entree/index">Entrées</a></li>
