--- a/src/View/Entree/carte_entree.html.twig
+++ b/src/View/Entree/carte_entree.html.twig
@@ -1,7 +1,30 @@
 {% extends 'layout.html.twig' %}
-
+{% block title %}Entrées {{parent()}}{% endblock %}
 {% block content %}
-    <h1 class="uk-text-center">Entrées</h1>
+ <div class="uk-align-center">
+
+    <nav class="uk-navbar-container " uk-navbar="dropbar: true; dropbar-mode: push">
+
+        <div class="uk-navbar-center">
+
+            <ul class="uk-navbar-nav">
+                <li>
+                    <a class="uk-article-title" href="#"><h1 class="uk-text-center">Entrées</h1></a>
+                    <div class="uk-navbar-dropdown">
+                        <ul class="uk-nav uk-navbar-dropdown-nav">
+                            <li class="uk-nav-header"><a href="/Entree/indexCat/Omnivore">Omnivores</a></li>
+                            <li class="uk-nav-divider"></li>
+                            <li class="uk-nav-header"><a href="/Entree/indexCat/vegetarian">Végétariens</a></li>
+                            <li class="uk-nav-divider"></li>
+                            <li class="uk-nav-header"><a href="/Entree/indexCat/vegan">Végans</a></li>
+                            <li class="uk-nav-divider"></li>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
+
+        </div>
+        </div>
         {% for entree in entrees %}
         {% if (loop.index %2) != 0 %} 
 <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin-medium uk-margin-xlarge-left uk-margin-xlarge-right" uk-grid>
@@ -13,9 +36,7 @@
             <div class="uk-card-body ">
                 <h3 class="uk-card-title ">{{ entree.name }}</h3>
                 <p>{{entree.description}}</p>
-                <a href="/Entree/edit/{{entree.id}}">Editer</a>
                 <form action="/Entree/delete/{{entree.id}}" method="POST">
-                <button>Delete</button>
                 </form>
             </div>
         </div>
@@ -24,16 +45,14 @@
     {% else %}
 <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin-medium uk-margin-xlarge-left uk-margin-xlarge-right" uk-grid>
     <div class="uk-flex-last@s uk-card-media-right uk-cover-container">
-        <img src="/assets/images/plat_index.jpg" alt="" uk-cover>
+        <img src="/assets/images/{{entree.image}}.jpg" alt="" uk-cover>
         <canvas width="600" height="400"></canvas>
     </div>
     <div>
             <div class="uk-card-body ">
                 <h3 class="uk-card-title ">{{ entree.name }}</h3>
                 <p>{{entree.description}}</p>
-                <a href="/Entree/edit/{{entree.id}}">Editer</a>
                 <form action="/Entree/delete/{{entree.id}}" method="POST">
-                <button>Delete</button>
                 </form>
             </div>
         </div>
@@ -44,12 +63,4 @@
             <li>Nothing to display</li>
         {% endfor %}
     </ul>
-    <a href='indexCat?cat=$vegan'>végan</a>
-     <a href="/Entree/add">Ajouter</a>
-     <form action="/Entree/indexVegan/{{entree.category}}" method="POST">
-                <button name='vegan'>végan</button>
-                </form>
-                <form action="/Entree/indexOmnivore/{{entree.category}}" method="POST">
-                <button name='vegan'>Omnivore</button>
-                </form>
 {% endblock %}
