--- a/src/View/Plat/index.html.twig
+++ b/src/View/Plat/index.html.twig
@@ -1,8 +1,32 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    <h1>Plats</h1>
-    <ul>
+
+<div class="uk-align-center">
+
+    <nav class="uk-navbar-container " uk-navbar="dropbar: true; dropbar-mode: push">
+
+        <div class="uk-navbar-center">
+
+            <ul class="uk-navbar-nav">
+                <li>
+                    <a class="uk-article-title" href="#"><h1 class="uk-text-center">Plats</h1></a>
+                    <div class="uk-navbar-dropdown">
+                        <ul class="uk-nav uk-navbar-dropdown-nav">
+                            <li class="uk-nav-header"><a href="/plat/catsort/omnivore">Omnivores</a></li>
+                            <li class="uk-nav-divider"></li>
+                            <li class="uk-nav-header"><a href="/plat/catsort/vegetarian">Végétariens</a></li>
+                            <li class="uk-nav-divider"></li>
+                            <li class="uk-nav-header"><a href="/plat/catsort/vegan">Végans</a></li>
+                            <li class="uk-nav-divider"></li>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
+
+        </div>
+        </div>
+
         {% for plat in plats %}
             {% if (loop.index %2) != 0 %}
               
@@ -37,7 +61,5 @@
         {% else %}
             <li>Nothing to display</li>
         {% endfor %}
-        
-    
-  
+          
 {% endblock %}
