add view for all CRUD, the final view is on progress

--- a/src/View/Boissons/add.html.twig
+++ b/src/View/Boissons/add.html.twig
@@ -3,4 +3,6 @@
 {% block content %}
     <h1>Add a new Boisson</h1>
     {% include 'Boissons/_form.html.twig' %}
+    <a href="/Admin/index">Back</a>
+
 {% endblock %}
