--- a/src/View/Dessert/edit.html.twig
+++ b/src/View/Dessert/edit.html.twig
@@ -3,5 +3,6 @@
 {% block content %}
     <h1>Edit Dessert {{ dessert.name }}</h1>
     {% include 'Dessert/_form.html.twig' %}
-    <a href="/dessert/show/{{ dessert.id }}">Back</a>
+        <a href="/Admin/index">Back</a>
+
 {% endblock %}
