--- a/src/View/Entree/add.html.twig
+++ b/src/View/Entree/add.html.twig
@@ -3,5 +3,6 @@
 {% block content %}
     <h1>Add a new item</h1>
     {% include 'Entree/_form.html.twig' %}
-    <a href="/Entree/index">Back</a>
+    <a href="/Admin/index">Back</a>
+
 {% endblock %}
