--- a/src/View/Item/add.html.twig
+++ b/src/View/Item/add.html.twig
@@ -3,4 +3,6 @@
 {% block content %}
     <h1>Add a new Iten</h1>
     {% include 'Item/_form.html.twig' %}
+    <a href="/Admin/index">Back</a>
+
 {% endblock %}
