--- a/src/View/Item/edit.html.twig
+++ b/src/View/Item/edit.html.twig
@@ -3,5 +3,6 @@
 {% block content %}
     <h1>Edit recette {{ item.title }}</h1>
     {% include 'Item/_form.html.twig' %}
-    <a href="/item/show/{{ recette.id }}">Back</a>
+    <a href="/Admin/index">Back</a>
+
 {% endblock %}
