--- a/src/View/Plat/add.html.twig
+++ b/src/View/Plat/add.html.twig
@@ -3,5 +3,6 @@
 {% block content %}
     <h1>Add a new Plat</h1>
     {% include 'Plat/_form.html.twig' %}
-    <a href="/plat/index">Back</a>
+    <a href="/Admin/index">Back</a>
+
 {% endblock %}
