--- a/src/View/Boissons/edit.html.twig
+++ b/src/View/Boissons/edit.html.twig
@@ -3,5 +3,5 @@
 {% block content %}
     <h1>Edit Boisson {{ boissons.name }}</h1>
     {% include 'Boissons/_form.html.twig' %}
-    <a href="/Boissons/show/{{ boissons.id }}">Back</a>
+    <a href="/Admin/index">Back</a>
 {% endblock %}
