--- a/src/View/Entree/_form.html.twig
+++ b/src/View/Entree/_form.html.twig
@@ -1,12 +1,12 @@
 {# TODO : manage errors display #}
 
 <form method="post">
-	<input type="hidden" value="{{ jour.id }}" name="id">
-	<input type="text" placeholder="category" name="category" value="{{jour.category}}">
-	<input type="text" placeholder="name" name="name" value="{{jour.name}}">
-	<input type="text" placeholder="description" name="description" value="{{jour.description}}">
-	<input type="text" placeholder="price" name="price" value="{{jour.price}}">
-	<input type="text" placeholder="image" name="image" value="{{jour.image}}">
+	<input type="hidden" value="{{ entree.id }}" name="id">
+	<input type="text" placeholder="category" name="category" value="{{entree.category}}">
+	<input type="text" placeholder="name" name="name" value="{{entree.name}}">
+	<input type="text" placeholder="description" name="description" value="{{entree.description}}">
+	<input type="text" placeholder="price" name="price" value="{{entree.price}}">
+	<input type="text" placeholder="image" name="image" value="{{entree.image}}">
 	<input type="submit" value="Valider">
 </form>
 
