--- a/src/View/Entree/edit.html.twig
+++ b/src/View/Entree/edit.html.twig
@@ -3,5 +3,6 @@
 {% block content %}
     <h1>Edit item {{ entree.name }}</h1>
     {% include 'Entree/_form.html.twig' %}
-    <a href="/Entree/index">Back</a>
+    <a href="/Admin/index">Back</a>
+
 {% endblock %}
