--- a/src/View/PlatDuJour/add.html.twig
+++ b/src/View/PlatDuJour/add.html.twig
@@ -1,7 +1,7 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    <h1>Add a new item</h1>
-    {% include 'Entree/_form.html.twig' %}
-    <a href="/Jour/index">Back</a>
+    <h1>Nouveau plat du jour</h1>
+    {% include 'PlatDuJour/_form.html.twig' %}
+    <a href="/Admin/index">Back</a>
 {% endblock %}
