--- a/src/View/PlatDuJour/edit.html.twig
+++ b/src/View/PlatDuJour/edit.html.twig
@@ -1,7 +1,8 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    <h1>Edit item {{ jour.name }}</h1>
+    <h1>Modifier {{ jour.name }}</h1>
     {% include 'PlatDuJour/_form.html.twig' %}
-    <a href="/Jour/index">Back</a>
+    <a href="/Admin/index">Back</a>
+
 {% endblock %}
