--- a/src/View/Boissons/edit.html.twig
+++ b/src/View/Boissons/edit.html.twig
@@ -1,7 +1,7 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    <h1>Edit Boisson {{ boissons.name }}</h1>
+    <h1>Edit {{ boissons.name }}</h1>
     {% include 'Boissons/_form.html.twig' %}
-    <a href="/Admin/index">Back</a>
+    <a class="uk-button uk-button-default" href="/Admin/index">Back</a>
 {% endblock %}
