--- a/src/View/Dessert/edit.html.twig
+++ b/src/View/Dessert/edit.html.twig
@@ -3,6 +3,7 @@
 {% block content %}
     <h1>Edit Dessert {{ dessert.name }}</h1>
     {% include 'Dessert/_form.html.twig' %}
-        <a href="/Admin/index">Back</a>
+    <a class="uk-button uk-button-default" href="/Admin/index">Back</a>
+
 
 {% endblock %}
