--- a/src/View/Dessert/add.html.twig
+++ b/src/View/Dessert/add.html.twig
@@ -3,6 +3,6 @@
 {% block content %}
     <h1>Add a new Dessert</h1>
     {% include 'Dessert/_form.html.twig' %}
-    <a href="/Admin/index">Back</a>
+    <a class="uk-button uk-button-default" href="/Admin/index">Back</a>
 
 {% endblock %}
