add css on Entrees form

--- a/src/View/Admin/index.html.twig
+++ b/src/View/Admin/index.html.twig
@@ -23,7 +23,7 @@
     <a class="uk-button uk-button-default uk-margin-large-left uk-margin-large-right uk-align-center" href="/Jour/add">Ajouter un élément du plat du jour</a>
 <hr class="uk-divider-icon">
 
-        <h1 class="uk-text-center">Entrees</h1>
+        <h1 class="uk-text-center">Entrées</h1>
         <div class="uk-child-width-expand@s" uk-grid>
             <div>
                 <ul class="uk-list uk-list-large uk-list-divider">
