--- a/src/View/Entree/add.html.twig
+++ b/src/View/Entree/add.html.twig
@@ -1,8 +1,8 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    <h1>Add a new item</h1>
+    <h1>Ajouter nouvelle entrée</h1>
     {% include 'Entree/_form.html.twig' %}
-    <a href="/Admin/index">Back</a>
+    <a class="uk-button uk-button-default" href="/Admin/index">Back</a>
 
 {% endblock %}
