--- a/src/View/PlatDuJour/add.html.twig
+++ b/src/View/PlatDuJour/add.html.twig
@@ -3,5 +3,6 @@
 {% block content %}
     <h1>Nouveau plat du jour</h1>
     {% include 'PlatDuJour/_form.html.twig' %}
-    <a href="/Admin/index">Back</a>
+    <a class="uk-button uk-button-default" href="/Admin/index">Back</a>
+
 {% endblock %}
