--- a/src/View/PlatDuJour/edit.html.twig
+++ b/src/View/PlatDuJour/edit.html.twig
@@ -3,6 +3,7 @@
 {% block content %}
     <h1>Modifier {{ jour.name }}</h1>
     {% include 'PlatDuJour/_form.html.twig' %}
-    <a href="/Admin/index">Back</a>
+    <a class="uk-button uk-button-default" href="/Admin/index">Back</a>
+
 
 {% endblock %}
