hot fix bouton navbar and add sort button

--- a/src/View/layout/navBar.html.twig
+++ b/src/View/layout/navBar.html.twig
@@ -16,9 +16,9 @@
                             <li><a href="/Entree/indexCat/vegan">Végans</a></li>
                             <li class="uk-nav-header"><a href="/Plat/index">Plats</a></li>
                             <li class="uk-nav-divider"></li>
-                            <li><a href="#">Végé</a></li>
-                            <li><a href="#">Végan</a></li>
-                            <li><a href="#">Normaux</a></li>
+                            <li><a href="/Plat/catSort/vegetarian">Végé</a></li>
+                            <li><a href="/Plat/catSort/vegan">Végan</a></li>
+                            <li><a href="/Plat/catSort/omnivore">Normaux</a></li>
                             <li class="uk-nav-header"><a href="/Dessert/index">Desserts</a></li>
                             <li class="uk-nav-divider"></li>
                             <li><a href="#">Végé</a></li>
