--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -18,8 +18,8 @@
     </div>
 
 
-<div class="uk-card uk-card-default uk-card-body uk-width-1-2@m uk-align-center">
-    <h3 class="uk-card-title uk-align-center">Menu</h3>
+<div class="uk-card uk-card-default uk-card-body uk-align-center uk-margin-xlarge-left uk-margin-xlarge-right">
+    <h3 class="uk-card-title uk-text-center">Menu</h3>
     <p>Lorem ipsum  sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     <div class="uk-button-group uk-flex uk-flex-center">
         <button class="uk-button uk-button-default">Carte</button>
