--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -41,12 +41,11 @@
                     <li><a href="/Entree/catSort/vegan">Végans</a></li>
                     <li class="uk-nav-header"><a href="/Dessert/index">Desserts</a></li>
                     <li class="uk-nav-divider"></li>
-                    <li><a href="#">Végé</a></li>
-                    <li><a href="#">Végan</a></li>
-                    <li><a href="#">Normaux</a></li>
+                    <li><a href="#">Omnivores</a></li>
+                    <li><a href="#">Végétariens</a></li>
+                    <li><a href="#">Végans</a></li>
                     <li class="uk-nav-header"><a href="/Boissons/index">Boissons</a></li>
                 </ul>
-
             </div>
         </div>
     </div>
@@ -61,7 +60,7 @@
                 <h3 class="uk-card-title ">Les entrées</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
                 <div class="uk-button-group uk-flex uk-flex-center ">
-                    <form action="/Entree/index/" methode="post">
+                    <form action="/Entree/index/" method="post">
                     <button class="uk-button uk-button-default uk-flex uk-flex-center" >Entrées</button>
                     </form>
                 </div>
@@ -79,7 +78,7 @@
                 <h3 class="uk-card-title ">Les plats</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
                 <div class="uk-button-group uk-flex uk-flex-center ">
-                    <form action="/Plat/index/" methode="post">
+                    <form action="/Plat/index/" method="post">
                     <button class="uk-button uk-button-default uk-flex uk-flex-center">Plats</button>
                     </form>
                 </div>
@@ -97,7 +96,7 @@
                 <h3 class="uk-card-title ">Les desserts</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
                 <div class="uk-button-group uk-flex uk-flex-center ">
-                    <form action="/Dessert/index/" methode="post">
+                    <form action="/Dessert/index/" method="post">
                     <button class="uk-button uk-button-default uk-flex uk-flex-center">Desserts</button>
                     </form>
                 </div>
@@ -115,7 +114,7 @@
                 <h3 class="uk-card-title ">Les boissons</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
                 <div class="uk-button-group uk-flex uk-flex-center ">
-                    <form action="/Boissons/index/" methode="post">
+                    <form action="/Boissons/index/" method="post">
                     <button class="uk-button uk-button-default uk-flex uk-flex-center">Boissons</button>
                     </form>
                 </div>
