add view MonCompte

--- a/src/View/Plat/index.html.twig
+++ b/src/View/Plat/index.html.twig
@@ -11,7 +11,7 @@
             <ul class="uk-navbar-nav">
                 <li>
                     <a class="uk-article-title" href="#"><h1 class="uk-text-center">Plats</h1></a>
-                    <div class="uk-navbar-dropdown">
+                    <div class="uk-navbar-dropdown"
                         <ul class="uk-nav uk-navbar-dropdown-nav">
                             <li class="uk-nav-header"><a href="/plat/catsort/omnivore">Omnivores</a></li>
                             <li class="uk-nav-divider"></li>
