add session start and login logout fix

--- a/src/View/User/identification.html.twig
+++ b/src/View/User/identification.html.twig
@@ -13,7 +13,7 @@
                     </div>
                     <div class="uk-margin">
                         <label for="user" class="uk-form-label">Email or Username</label>
-                        <input id="user" type="text" name="username" autocomplete="username" autofocus="autofocus" class="uk-input uk-form-large">
+                        <input id="user" type="text" name="name" autocomplete="username" autofocus="autofocus" class="uk-input uk-form-large">
                     </div>
                     <div class="uk-margin">
                         <div class="uk-form-label uk-flex uk-flex-between">
@@ -22,7 +22,7 @@
                                 <a class="uk-link-text">Forgot Password?</a>
                             </div>
                         </div>
-                        <input id="password" type="password" name="password" autocomplete="current-password" class="uk-input uk-form-large">
+                        <input id="password" type="password" name="pass" autocomplete="current-password" class="uk-input uk-form-large">
                     </div>
                     <div class="uk-margin-medium-top uk-text-center">
                         <button type="submit" class="uk-button uk-button-primary uk-button-large">Sign in</button>
