--- a/src/View/User/inscription.html.twig
+++ b/src/View/User/inscription.html.twig
@@ -12,16 +12,12 @@
 
                     </div>
                     <div class="uk-margin">
-                        <label for="lastname" class="uk-form-label">Lastname</label>
-                        <input id="lastname" type="text" name="lastname" autocomplete="lastname" autofocus="autofocus" class="uk-input uk-form-large">
-                    </div>
-                    <div class="uk-margin">
                         <label for="firstname" class="uk-form-label">Firstname</label>
-                        <input id="firstname" type="text" name="firstname" autocomplete="firtsname" autofocus="autofocus" class="uk-input uk-form-large">
+                        <input id="firstname" type="text" name="name" autocomplete="firtsname" autofocus="autofocus" class="uk-input uk-form-large">
                     </div>
                     <div class="uk-margin">
-                        <label for="mail" class="uk-form-label">Email</label>
-                        <input id="mail" type="text" name="email" autocomplete="email" autofocus="autofocus" class="uk-input uk-form-large">
+                        <label for="mail" class="uk-form-label">Adresse</label>
+                        <input id="mail" type="text" name="adress" autofocus="autofocus" class="uk-input uk-form-large">
                     </div>
                     <div class="uk-margin">
                         <div class="uk-form-label uk-flex uk-flex-between">
@@ -29,7 +25,7 @@
                                 <label for="password" class="uk-">Password</label>
                             </div>
                         </div>
-                        <input id="password" type="password" name="password" autocomplete="current-password" class="uk-input uk-form-large">
+                        <input id="password" type="password" name="pass" autocomplete="current-password" class="uk-input uk-form-large">
                     </div>
                     <div class="uk-margin">
                         <div class="uk-form-label uk-flex uk-flex-between">
@@ -37,7 +33,7 @@
                                 <label for="confirmPassword" class="uk-">Confirm your Password</label>
                             </div>
                         </div>
-                        <input id="confirmPassword" type="password" name="confirmPassword" autocomplete="current-password" class="uk-input uk-form-large">
+                        <input id="confirmPassword" type="password" name="repass" autocomplete="current-password" class="uk-input uk-form-large">
                     </div>
                     <div class="uk-margin-medium-top uk-text-center">
                         <button type="submit" class="uk-button uk-button-primary uk-button-large">Sign up</button>
