--- a/src/View/layout/navBar.html.twig
+++ b/src/View/layout/navBar.html.twig
@@ -28,9 +28,18 @@
                         </ul>
                     </div>
                 </li>
-                <li><a class="uk-text-emphasis" href="#">Réservation</a></li>
-                <li><a class="uk-text-emphasis" href="#">Inscription/Connexion</a></li>
+                <li><a class="uk-text-emphasis" href="/Panier/add/">Réservation</a></li>
+                {% if user is not defined %}
+                <li><a class="uk-text-emphasis" href="/User/connexion/">Inscription/Connexion</a></li>
+                {% endif %}
                 <li><a class="uk-text-emphasis" href="#">Contact</a></li>
+                {% if user is defined %}
+                <li><a class="uk-text-emphasis" href="/User/logout/">Déconnexion</a></li>
+                {% endif %}
+                {% if user is defined and user['admin'] == true %}
+                <li><a class="uk-text-emphasis" href="/Admin/index/">Admin</a></li>
+                {% endif %}
+
             </ul>
         </div>
     </nav>
