--- a/src/View/Entree/add.html.twig
+++ b/src/View/Entree/add.html.twig
@@ -3,6 +3,9 @@
 {% block content %}
     <h1>Ajouter nouvelle entrée</h1>
     {% include 'Entree/_form.html.twig' %}
+    <input class="uk-button uk-button-default uk-align-center uk-width-1-5" type="file" name="image" id="imageUpload" />
+    <input class="uk-button uk-button-default uk-align-center" type="submit" value="Valider">
+    </form>
     <a class="uk-button uk-button-default" href="/Admin/index">Back</a>
 
 {% endblock %}
