--- a/src/View/Entree/edit.html.twig
+++ b/src/View/Entree/edit.html.twig
@@ -3,6 +3,8 @@
 {% block content %}
     <h1>Edit {{ entree.name }}</h1>
     {% include 'Entree/_form.html.twig' %}
+    <input class="uk-button uk-button-default uk-align-center" type="submit" value="Valider">
+    </form>
     <a class="uk-button uk-button-default" href="/Admin/index">Back</a>
 
 {% endblock %}
