--- a/src/View/PlatDuJour/add.html.twig
+++ b/src/View/PlatDuJour/add.html.twig
@@ -4,6 +4,9 @@
     
     <h1>Nouveau plat du jour</h1>
     {% include 'PlatDuJour/_form.html.twig' %}
+    <input class="uk-button uk-button-default uk-align-center uk-width-1-5" type="file" name="image" id="imageUpload" />
+    <input class="uk-button uk-button-default uk-align-center" type="submit" value="Valider">
+    </form>
     <a class="uk-button uk-button-default" href="/Admin/index">Back</a>
 
 {% endblock %}
