--- a/src/View/Boissons/_form.html.twig
+++ b/src/View/Boissons/_form.html.twig
@@ -24,12 +24,11 @@
     </div>
 
     <div class="uk-margin">
-        <label class="uk-form-label" for="form-horizontal-text">Text</label>
+        <label class="uk-form-label" for="form-horizontal-text">Image (nom avec extension)</label>
         <div class="uk-form-controls">
             <input class="uk-input" id="form-horizontal-text" type="text" placeholder="image" name="image" value="{{boissons.image}}">
         </div>
     </div>
 
-<input class="uk-button uk-button-default uk-align-center" type="submit" value="Valider">
 
-</form>
+
