--- a/src/View/Plat/edit.html.twig
+++ b/src/View/Plat/edit.html.twig
@@ -3,6 +3,8 @@
 {% block content %}
     <h1> Editer : {{ plat.name }}</h1>
     {% include 'Plat/_form.html.twig' %}
+    <input class="uk-button uk-button-default uk-align-center" type="submit" value="Valider">
+    </form>
     <a class="uk-button uk-button-default" href="/Admin/index">Back</a>
 
 
