--- a/src/View/PlatDuJour/edit.html.twig
+++ b/src/View/PlatDuJour/edit.html.twig
@@ -4,6 +4,8 @@
     {{ post }}
     <h1>Modifier {{ jour.name }}</h1>
     {% include 'PlatDuJour/_form.html.twig' %}
+    <input class="uk-button uk-button-default uk-align-center" type="submit" value="Valider">
+    </form>
     <a class="uk-button uk-button-default" href="/Admin/index">Back</a>
 
 
