--- a/src/View/User/show.html.twig
+++ b/src/View/User/show.html.twig
@@ -15,16 +15,20 @@
                         
                     </div>
                     <div class="uk-width-expand">
-                        <h4 class="uk-comment-title uk-margin-remove"><a class="uk-link-reset" href="#">Nom : {{ user.name }}</a></h4>
-                        <h4 class="uk-comment-title uk-margin-remove"><a class="uk-link-reset" href="#">Adresse  : {{ user.adress }}</a></h4>
+                        <h4 class="uk-comment-title uk-margin-remove"><a class="uk-link-reset" href="#">Nom d'utilisateur : {{ user.name }}</a></h4>
+                        <h4 class="uk-comment-title uk-margin-remove"><a class="uk-link-reset" href="#">Adresse Postale  : {{ user.adress }}</a></h4>
                     </div>
                 </div>
             </header>
 
             <p uk-margin>
             <a class="uk-button uk-button-default" href="/User/edit/{{ user.id }}">Editer le compte</a>
-            <a class="uk-button uk-button-default" href="/User/logout/">Déconnexion</a>
-            <a class="uk-button uk-button-danger">Supprimer le compte</a>
+            <form action="/User/delete/{{user.id}}" method="POST"><button class="uk-button uk-button-danger" href="/User/Connexion">Supprimer le compte</button>     </form>
+
+
+
+
+
             </p>
 
             <div class="uk-comment-body">
